--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -20,7 +20,11 @@ Updated: 2021-03-30 08:45:24
 .button.th-button.add_to_cart_button.ajax_add_to_cart:hover {background: #5fd300;color: #fff;font-size: 14px;padding: 12px;}
     /*widgets na home*/
 .th-aboutme, .th-aboutme a {text-align: center;font-weight: 600;}
+
 /*Padrao*/
+.thunk-hglt-box .content {padding-left: 15px;text-align: center;} 
+.thunk-hglt-icon {font-size: 25px;}
+.thunk-highlight-col {width: 25%;padding: 0px 11px;}
 
 /*Head*/
 
@@ -29,6 +33,7 @@ Updated: 2021-03-30 08:45:24
 /*Menu*/
 
 /*Home*/
+.open-shop-widget-content .form-content {max-width: 66%;}
 
 /*Blog*/
 
@@ -38,8 +43,13 @@ Updated: 2021-03-30 08:45:24
 .woocommerce div.product p.price, .woocommerce div.product span.price {color: #1c1d1e;}
 
 /* cetegoty slider number on home*/
+
     /* cetegoty slider number */
 .total-number {font-style: initial;color: #000;font-weight: 600;font-size: inherit;}
+
+    /* wishlist e compare na pagina do produto*/
+.woosc-btn.wooscp-btn.wooscp-btn-13.wooscp-btn-added.woosc-added, .woosw-btn.woosw-btn-13 {border-radius: 50%;}
+
 /*Footer*/
 .widget-footer-col1 {text-align: center;}
 /*Footer*/
