--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -7,10 +7,7 @@ Author URI: https://torresdigital.com.br
 Description: Ceva e Putaria 24Hs por Dia !
 Tags: e-commerce,blog,grid-layout,one-column,two-columns,three-columns,four-columns,left-sidebar,right-sidebar,custom-background,custom-colors,custom-logo,custom-menu,featured-image-header,featured-images,custom-header,footer-widgets,full-width-template,sticky-post,theme-options,threaded-comments,translation-ready
 Version: 2021 - 1.0
-Updated: 2021-03-30 08:45:24
-
-*/
-
+Updated: 2021-03-30 08:45:24 */
 
 /*Correção*/
 
@@ -28,16 +25,21 @@ Updated: 2021-03-30 08:45:24
 
 /*Head*/
 
+
 /*Logo*/
 
+
 /*Menu*/
+
 
 /*Home*/
 .open-shop-widget-content .form-content {max-width: 66%;}
 
 /*Blog*/
 
+
 /*Woocommerce*/
+
 
     /*preço pagina do produto*/
 .woocommerce div.product p.price, .woocommerce div.product span.price {color: #1c1d1e;}
