--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -7,7 +7,10 @@ Author URI: https://torresdigital.com.br
 Description: Ceva e Putaria 24Hs por Dia !
 Tags: e-commerce,blog,grid-layout,one-column,two-columns,three-columns,four-columns,left-sidebar,right-sidebar,custom-background,custom-colors,custom-logo,custom-menu,featured-image-header,featured-images,custom-header,footer-widgets,full-width-template,sticky-post,theme-options,threaded-comments,translation-ready
 Version: 2021 - 1.0
-Updated: 2021-03-30 08:45:24 */
+Updated: 2021-03-30 08:45:24
+
+*/
+
 
 /*Correção*/
 
@@ -22,6 +25,8 @@ Updated: 2021-03-30 08:45:24 */
 .thunk-hglt-box .content {padding-left: 15px;text-align: center;} 
 .thunk-hglt-icon {font-size: 25px;}
 .thunk-highlight-col {width: 25%;padding: 0px 11px;}
+
+.main-header-col2 { width: 57%; }
 
 /*Head*/
 
