--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -27,6 +27,7 @@ Updated: 2021-03-30 08:45:24
 .thunk-highlight-col {width: 25%;padding: 0px 11px;}
 
 .main-header-col2 { width: 57%; }
+.main-header-col3 {width: 20%;}
 
 /*Head*/
 
