--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -37,7 +37,8 @@ Updated: 2021-03-30 08:45:24
 
 .shipping-calculator-form {display: inline-block !important;}
 
-.shipping-calculator-button {font-size: 14px;text-align: center;color: #000;font-weight: 600;background: #ff3815;padding: 5px 10px;border-radius: 14px;}
+.shipping-calculator-button {font-size: 11px;text-align: center;color: #000;font-weight: 600;background: #ff3815;padding: 5px 24px;border-radius: 14px;}
+.shipping-calculator-button:hover {color: black;animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);}
 
 
 /*Head*/
@@ -658,3 +659,5 @@ html .xoo-wsc-ft-btn.button:hover {background: #000;color: #fff;}
 .xoo-wsc-bki.xoo-wsc-icon-basket1:hover, .xoo-wsch-top .xoo-wsch-basket:hover {
     animation: none;
 }
+
+@keyframes shadow-pulse{0% {box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);}100% {box-shadow: 0 0 0 15px rgba(0, 0, 0, 0);}}
