--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -31,14 +31,14 @@ Updated: 2021-03-30 08:45:24
 .sticky-header-col2 { width: 54%; }
 .main-header-col3 {width: 20%;}
 
-#move-to-top {bottom: 98px;}
+html #move-to-top {background-color: #141415;font-size: 18px;border-radius: 50%;right: 23px;bottom: 120px;}
 
 .openshop-site section.thunk-ribbon-section .content-wrap::before {background: #FF3815;}
 
 .shipping-calculator-form {display: inline-block !important;}
 
-.shipping-calculator-button {font-size: 11px;text-align: center;color: #000;font-weight: 600;background: #ff3815;padding: 5px 24px;border-radius: 14px;}
-.shipping-calculator-button:hover {color: black;animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);}
+.shipping-calculator-button {font-size: 14px;text-align: center;color: #fff;font-weight: 600;background: #ff3815;padding: 5px 24px }
+.shipping-calculator-form .button:hover {color: black;animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);}
 
 
 /*Head*/
