--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -37,9 +37,13 @@ html #move-to-top {background-color: #141415;font-size: 18px;border-radius: 50%;
 
 .shipping-calculator-form {display: inline-block !important;}
 
-html .shipping-calculator-button {font-size: 12px;text-align: center;color: #fff;font-weight: 600;background: #ff3815;padding: 5px 2px;font-weight: 600;text-transform: initial;}
-.shipping-calculator-form .button:hover {color: black;animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);}
 .shipping-calculator-button:hover {color: #fff;}
+.shipping-calculator-form .button:hover {color: black;animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);}
+html .shipping-calculator-button {font-size: 12px;text-align: center;color: #fff;font-weight: 600;background: #ff3815;padding: 5px 2px;font-weight: 600;text-transform: initial;}
+
+/*.woocommerce-form.woocommerce-form-login.login {display: block !important;}*/
+
+.woocommerce-info {font-family: "Roboto-Bold", sans-serif;text-align: center;font-size: 20px;}
 
 
 /*Head*/
