--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -43,7 +43,10 @@ html .shipping-calculator-button {font-size: 12px;text-align: center;color: #fff
 
 /*.woocommerce-form.woocommerce-form-login.login {display: block !important;}*/
 
-.woocommerce-form-login-toggle .woocommerce-info {font-family: "Roboto-Bold", sans-serif;text-align: center;font-size: 20px;}
+.woocommerce-form-login-toggle .woocommerce-info a:hover {color: #000}
+/*.woocommerce-form-login-toggle .woocommerce-info a {background: #FF3815;padding: 4px 8px;border-radius: 12px;}*/
+.woocommerce-form-login-toggle .woocommerce-info a {background: #FF3815;padding: 5px 8px;border-radius: 12px;width: 50%;height: 28px;}
+.woocommerce-form-login-toggle .woocommerce-info {font-family: "Roboto-Bold", sans-serif;text-align: center;font-size: 14px;}
 .woocommerce-form-coupon-toggle .woocommerce-info {font-size: 14px;}
 
 
@@ -632,6 +635,7 @@ html .xoo-wsc-icon-basket1::before, html .xoo-wsc-icon-bag2::before {  content: 
 html .xoo-wsc-ft-btn.button { font-size: 12px; font-weight: 600 }
 html .xoo-wsc-basket {border-radius: 100%;}
 html .xoo-wsc-ft-btn.button:hover {background: #000;color: #fff;}
+html .xoo-wsc-ft-btn.button.btn.xoo-wsc-ft-btn-checkout {background: #FF3815;color: #fff;font-size: 14px;font-weight: 600;}
 
 
 @font-face {
