--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -33,8 +33,11 @@ Updated: 2021-03-30 08:45:24
 
 html #move-to-top {background-color: #141415;font-size: 18px;border-radius: 50%;right: 23px;bottom: 120px;}
 
-.openshop-site section.thunk-ribbon-section .content-wrap::before {background: #FF3815;}
+html .openshop-site section.thunk-ribbon-section .content-wrap::before {
+    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+}
 
+.ribbon-btn:hover {color: #01406a;text-align: center;}
 .shipping-calculator-form {display: inline-block !important;}
 
 .shipping-calculator-button:hover {color: #fff;}
@@ -51,6 +54,7 @@ html .shipping-calculator-button {font-size: 12px;text-align: center;color: #fff
 .woocommerce-form-login-toggle .woocommerce-info {font-family: "Roboto-Bold", sans-serif;text-align: center;font-size: 14px;}
 .woocommerce-form-coupon-toggle .woocommerce-info {font-size: 14px;}
 .form-row.form-row-wide.create-account.woocommerce-validated span {font-family: "Roboto-Bold", sans-serif;text-align: center;font-size: 20px; color: #FF3815}
+
 
 
 /*Head*/
