--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -33,8 +33,13 @@ Updated: 2021-03-30 08:45:24
 
 html #move-to-top {background-color: #141415;font-size: 18px;border-radius: 50%;right: 23px;bottom: 120px;}
 
-html .openshop-site section.thunk-ribbon-section .content-wrap::before {
+/* html .openshop-site section.thunk-ribbon-section .content-wrap::before {
     background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+} */
+
+html .openshop-site section.thunk-ribbon-section .content-wrap::before {
+    background-image: url(https://c8.alamy.com/comp/2C13F0H/smiley-emojis-in-yellow-background-vector-concept-smileys-emoji-avatar-character-in-top-view-with-different-facial-expressions-like-in-love-happy-2C13F0H.jpg);
+    background-size: 81%;
 }
 
 .ribbon-btn:hover {color: #01406a;text-align: center;}
@@ -55,7 +60,13 @@ html .shipping-calculator-button {font-size: 12px;text-align: center;color: #fff
 .woocommerce-form-coupon-toggle .woocommerce-info {font-size: 14px;}
 .form-row.form-row-wide.create-account.woocommerce-validated span {font-family: "Roboto-Bold", sans-serif;text-align: center;font-size: 20px; color: #FF3815}
 
+.woocommerce-Price-amount.amount bdi {font-weight: 600;font-size: 14px;}
 
+.product-template-default .quantity input, .quantity input {width: 70px !important;}
+
+.onsale, .woocommerce .thunk-woo-product-list span.onsale {background-color: red;animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);border-radius: 17px;right: 12px;top: 10px;}
+
+.thunk-ribbon-content-col1 h3 {color: #fff;background-color: rgba(0,0,0,0.6);padding: 0 5px;border-radius: 30px;text-align: center;width: 70%;background-position: 12px 12px;position: relative;display: inline-block;}
 
 /*Head*/
 .top-header-col1 {font-weight: 600;}
