--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -55,7 +55,7 @@ html .shipping-calculator-button {font-size: 12px;text-align: center;color: #fff
 .woocommerce-shipping-totals.shipping {background: #f7f8f9;}
 .woocommerce-form-login-toggle .woocommerce-info a:hover {color: #000}
 /*.woocommerce-form-login-toggle .woocommerce-info a {background: #FF3815;padding: 4px 8px;border-radius: 12px;}*/
-.woocommerce-form-login-toggle .woocommerce-info a {background: #FF3815;padding: 5px 8px;border-radius: 12px;width: 50%;height: 28px;}
+.woocommerce-form-login-toggle .woocommerce-info a {background: #FF3815;padding: 3px 8px;border-radius: 12px;width: 50%;height: 28px;}
 .woocommerce-form-login-toggle .woocommerce-info {font-family: "Roboto-Bold", sans-serif;text-align: center;font-size: 14px;}
 .woocommerce-form-coupon-toggle .woocommerce-info {font-size: 14px;}
 .form-row.form-row-wide.create-account.woocommerce-validated span {font-family: "Roboto-Bold", sans-serif;text-align: center;font-size: 20px; color: #FF3815}
@@ -67,6 +67,9 @@ html .shipping-calculator-button {font-size: 12px;text-align: center;color: #fff
 .onsale, .woocommerce .thunk-woo-product-list span.onsale {background-color: red;animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);border-radius: 17px;right: 12px;top: 10px;}
 
 .thunk-ribbon-content-col1 h3 {color: #fff;background-color: rgba(0,0,0,0.6);padding: 0 5px;border-radius: 30px;text-align: center;width: 70%;background-position: 12px 12px;position: relative;display: inline-block;}
+
+.ribbon-btn {border: 1px #000 solid;width: 91%;position: relative;display: inline-block;text-align: center;padding: 5px;top: 6px; border-radius: 30px;animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);}
+
 
 /*Head*/
 .top-header-col1 {font-weight: 600;}
