--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -60,7 +60,7 @@ html .shipping-calculator-button {font-size: 12px;text-align: center;color: #fff
 .woocommerce-form-coupon-toggle .woocommerce-info {font-size: 14px;}
 .form-row.form-row-wide.create-account.woocommerce-validated span {font-family: "Roboto-Bold", sans-serif;text-align: center;font-size: 20px; color: #FF3815}
 
-.woocommerce-Price-amount.amount bdi {font-weight: 600;font-size: 14px;}
+.woocommerce-Price-amount.amount bdi {font-weight: 600;font-size: 14px; font-family: "Roboto-Bold", sans-serif;}
 
 .product-template-default .quantity input, .quantity input {width: 70px !important;}
 
@@ -70,10 +70,10 @@ html .shipping-calculator-button {font-size: 12px;text-align: center;color: #fff
 
 .ribbon-btn {border: 1px #000 solid;width: 91%;position: relative;display: inline-block;text-align: center;padding: 5px;top: 6px; border-radius: 30px;animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);}
 
-html #shipping_method {font-size: 20px;text-align: center;font-family: "Roboto-Bold", sans-serif;background: red;color: #fff;text-shadow: 0px 1px 2px #000; border-radius: 5px}
+html #shipping_method {font-size: 20px;text-align: center;font-family: "Roboto-Bold", sans-serif;background: #ee3e80;color: #fff;text-shadow: 0px 1px 2px #000; border-radius: 5px}
 
 .woocommerce ul#shipping_method li input {top: 5px;position: relative;}
-.woocommerce ul#shipping_method li {margin: 2px 0;line-height: 1.5em;list-style: none outside;padding: 15px 0;}
+html .woocommerce ul#shipping_method li {margin: 2px 0;line-height: 1.5em;list-style: none outside;padding: 15px 0;}
 
 /*Head*/
 .top-header-col1 {font-weight: 600;}
