--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -79,6 +79,9 @@ html .woocommerce ul#shipping_method li {margin: 2px 0;line-height: 1.5em;list-s
 
 .thunk-product .woosw-btn::before, .woosw-btn::before {font-size: 13px;background: red;border-radius: 40px;padding: 4px;color: #fff;font-weight: 900;}
 
+.thunk-single-product-summary-wrap .summary.entry-summary {bottom: -32px;position: relative;display: block;}
+.summary .woosw-btn {border-radius: 30px;line-height: 0px;}
+
 /*hover lista*/
 html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);}
 
