--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -81,6 +81,10 @@ html .woocommerce ul#shipping_method li {margin: 2px 0;line-height: 1.5em;list-s
 
 .thunk-single-product-summary-wrap .summary.entry-summary {bottom: -32px;position: relative;display: block;}
 
+.entry-content p {margin-bottom: 0; font-size: 16px } .entry-content h2 {font-size: 16px} blockquote {padding: 15px;font-size: 15px;font-style: normal;margin: 0;line-height: inherit;position: relative;}
+
+.open-cart p.buttons .checkout {margin-left: 0;} .woocommerce-mini-cart__buttons.buttons {width: 100%;}
+
 
 /*hover lista*/
 html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);}
@@ -217,6 +221,8 @@ html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;
 }
 
 @media only screen and (max-width : 320px) {
+    
+    h1 {font-size: 20px;margin: 20px 0;border-bottom: 1px solid;padding-bottom: 10px;}
 
 }
 
