--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -86,8 +86,10 @@ html .woocommerce ul#shipping_method li {margin: 2px 0;line-height: 1.5em;list-s
 .open-cart p.buttons .checkout {margin-left: 0;} .woocommerce-mini-cart__buttons.buttons {width: 100%;}
 
 
+/*Lista*/
 /*hover lista*/
 html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);}
+.woosw-copy-btn {margin-left: 12px;}
 
 
 /*Head*/
