--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -225,9 +225,10 @@ html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;
 
 @media only screen and (max-width : 360px) {
 
-.below-header-col2 {width: 83%;margin-bottom: 20px;}
+.below-header-col2 {width: 47%;margin-bottom: 20px;}
 
     .below-header-bar {height: 106px;text-align: center;display: inline-block;}
+    #search-box input[type="text"], select#product_cat {padding: 0px 10px;font-size: 11px;width: 80%;}
 
 
 }
@@ -235,6 +236,8 @@ html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;
 @media only screen and (max-width : 320px) {
     
     h1 {font-size: 20px;margin: 20px 0;border-bottom: 1px solid;padding-bottom: 10px;}
+    .below-header-col2 {width: 48%;margin: auto 2px;}
+    .header-icon a, .thunk-icon .cart-icon a.cart-contents {margin: 0 1px;}
 
 }
 
