--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -77,7 +77,7 @@ html #shipping_method {font-size: 20px;text-align: center;font-family: "Roboto-B
 .woocommerce ul#shipping_method li input {top: 5px;position: relative;}
 html .woocommerce ul#shipping_method li {margin: 2px 0;line-height: 1.5em;list-style: none outside;padding: 15px 0;}
 
-.thunk-product .woosw-btn::before, .woosw-btn::before {font-size: 13px;background: red;border-radius: 40px;padding: 4px;color: #fff;font-weight: 900;}
+.thunk-product .woosw-btn::before, .woosw-btn::before {font-size: 13px;background: red;border-radius: 40px;padding: 4px;color: #fff;font-weight: 900;} .woosw-btn.woosw-added::before {color: #fff}
 
 .thunk-single-product-summary-wrap .summary.entry-summary {bottom: -32px;position: relative;display: block;}
 
@@ -220,6 +220,7 @@ html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;
 @media only screen and (max-width : 480px) {
 
     .thunk-highlight-col {width: 100%;padding: 10px 11px;}
+    .content-html {line-height: 17px;margin: 12px 0;}
 
 }
 
@@ -227,10 +228,19 @@ html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;
 
 .below-header-col2 {width: 47%;margin-bottom: 20px;}
 
+    .thunk-single-product-summary-wrap {height: 650px;}
+
     .below-header-bar {height: 106px;text-align: center;display: inline-block;}
     #search-box input[type="text"], select#product_cat {padding: 0px 10px;font-size: 11px;width: 80%;}
-    .open-shop-quantity {width: 118px;margin: 0 5px 0 0;}
+    .open-shop-quantity {width: 132px;margin: 0 5px 0 0;}
+    
 
+    .single_add_to_cart_button.button.alt, .woocommerce #respond input#submit.alt, .woocommerce a.button.alt, .woocommerce button.button.alt, .woocommerce input.button.alt, .woocommerce #respond input#submit, .woocommerce button.button, .woocommerce input.button, .woocommerce div.product form.cart .button {line-height: 32px;margin-right: 9px;text-align: center;padding: 0 10px;min-width: 88px;}
+    
+    .woocommerce div.product form.cart {margin-bottom: 9px;text-align: center;}
+    .added_to_cart.wc-forward {color: red;font-family: "Roboto-Bold", sans-serif;font-size: 20px;}
+    .xoo-wsc-container, .xoo-wsc-slider {max-width: 280px;}
+    .xoo-wsc-cart-active .xoo-wsc-basket {right: 280px;}
 
 }
 
@@ -240,9 +250,12 @@ html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;
     .below-header-col2 {width: 48%;margin: auto 2px;}
     .header-icon a, .thunk-icon .cart-icon a.cart-contents {margin: 0 1px;}
     .open-shop-quantity {width: 108px; margin: 0 2px}
-    .single_add_to_cart_button.button.alt, .woocommerce #respond input#submit.alt, .woocommerce a.button.alt, .woocommerce button.button.alt, .woocommerce input.button.alt, .woocommerce #respond input#submit, .woocommerce button.button, .woocommerce input.button, .woocommerce div.product form.cart .button {line-height: 32px;margin-right: 9px;text-align: center;padding: 0 10px;min-width: 88px;}
     
-    .thunk-single-product-summary-wrap {height: 570px;}
+    .thunk-single-product-summary-wrap {height: 600px;}
+    .xoo-wsc-cart-active .xoo-wsc-basket {right: 239px;}
+    .xoo-wsc-container, .xoo-wsc-slider {max-width: 280px;}
+
+
 
 }
 
