--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -4,7 +4,7 @@ Theme URI: https://torresdigital.com.br
 Template: open-shop
 Author: Torres Digital
 Author URI: https://torresdigital.com.br
-Description: Ceva e Putaria 24Hs por Dia !
+Description: Ceva 24Hs por Dia !
 Tags: e-commerce,blog,grid-layout,one-column,two-columns,three-columns,four-columns,left-sidebar,right-sidebar,custom-background,custom-colors,custom-logo,custom-menu,featured-image-header,featured-images,custom-header,footer-widgets,full-width-template,sticky-post,theme-options,threaded-comments,translation-ready
 Version: 2021 - 1.0
 Updated: 2021-03-30 08:45:24
