--- a/themes/ceva24/style.css
+++ b/themes/ceva24/style.css
@@ -253,7 +253,6 @@ html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;
 }
 
 @media only screen and (max-width : 360px) {
-   
 
     .menu-toggle .icon-bar {width: 16px;height: 2px;border-radius: 1px;margin: 5px;}
     #menu-btn {border: 1px solid;position: relative;border-radius: 50%;margin-bottom: 6px;margin-right: 31px;animation: shadow-pulse 1s infinite;cursor: pointer;box-shadow: 0 0 0 rgba(204,169,44, 0.4);}
@@ -265,22 +264,22 @@ html .woosw-btn:hover::before {color: #fff; animation: shadow-pulse 1s infinite;
     .below-header-bar {height: 106px;text-align: center;display: inline-block;}
     #search-box input[type="text"], select#product_cat {padding: 0px 10px;font-size: 11px;width: 80%;}
     .open-shop-quantity {width: 132px;margin: 0 5px 0 0;}
-    
 
     .single_add_to_cart_button.button.alt, .woocommerce #respond input#submit.alt, .woocommerce a.button.alt, .woocommerce button.button.alt, .woocommerce input.button.alt, .woocommerce #respond input#submit, .woocommerce button.button, .woocommerce input.button, .woocommerce div.product form.cart .button {line-height: 32px;margin-right: 9px;text-align: center;padding: 0 10px;min-width: 88px;}
-    
+
     .woocommerce div.product form.cart {margin-bottom: 9px;text-align: center;}
     .added_to_cart.wc-forward {color: red;font-family: "Roboto-Bold", sans-serif;font-size: 20px;}
     .xoo-wsc-container, .xoo-wsc-slider {max-width: 280px;}
     .xoo-wsc-cart-active .xoo-wsc-basket {right: 280px;}
 
     html .woocommerce ul#shipping_method li {margin-top: 23px;}
-    
+
     .woocommerce div.product div.images .woocommerce-product-gallery__trigger {top: 32px;right: 16px;}
+    .woocommerce div.product form.cart { width: 75%; }
 }
 
 @media only screen and (max-width : 320px) {
-    
+
     h1 {font-size: 20px;margin: 20px 0;border-bottom: 1px solid;padding-bottom: 10px;}
     .below-header-col2 {width: 48%;margin: auto 2px;}
     .header-icon a, .thunk-icon .cart-icon a.cart-contents {margin: 0 1px;}
